--- a/src/tubes/sister/View/Client.form
+++ b/src/tubes/sister/View/Client.form
@@ -75,6 +75,9 @@
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
                 <Property name="focusable" type="boolean" value="false"/>
+                <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
+                  <Insets value="[2, 5, 2, 2]"/>
+                </Property>
               </Properties>
             </Component>
           </SubComponents>
